package com.airtribe.learntrack.util;

public class IdGenerator {
    private static int studentCounter = 1000;
    private static int courseCounter = 2000;
    private static int enrollmentCounter = 3000;

    public static int nextStudentId() {
        return studentCounter++;
    }

    public static int nextCourseId() {
        return courseCounter++;
    }

    public static int nextEnrollmentId() {
        return enrollmentCounter++;
    }
}
