@startuml
enum com.airtribe.learntrack.enums.EnrollmentStatus {
+  ACTIVE
+  COMPLETED
+  CANCELLED
}

class com.airtribe.learntrack.service.CourseService {
- List<Course> courses
+ Course addCourse(String,String,int)
+ List<Course> listCourses()
+ Course findById(int)
+ void toggleActive(int)
}


class com.airtribe.learntrack.entity.Trainer {
- ArrayList<String> subjects
- ArrayList<Student> students
+ ArrayList<String> getSubjects()
+ void setSubjects(ArrayList<String>)
+ ArrayList<Student> getStudents()
+ void setStudents(ArrayList<Student>)
}


class com.airtribe.learntrack.exception.EntityNotFoundException {
}
class com.airtribe.learntrack.entity.Course {
- int id
- String courseName
- String description
- int durationInWeeks
- boolean active
+ int getId()
+ void setId(int)
+ String getCourseName()
+ String getDescription()
+ int getDurationInWeeks()
+ boolean isActive()
+ void setActive(boolean)
+ String toString()
}


class com.airtribe.learntrack.entity.Student {
- String batch
- boolean active
+ String getBatch()
+ void setBatch(String)
+ boolean isActive()
+ void setActive(boolean)
+ String toString()
}


class com.airtribe.learntrack.ui.Main {
- {static} Scanner scanner
- {static} StudentService studentService
- {static} CourseService courseService
- {static} EnrollmentService enrollmentService
+ {static} void main(String[])
- {static} void printMenu()
- {static} void addStudent()
- {static} void searchStudent()
- {static} void listStudents()
- {static} void deactivateStudent()
- {static} void addCourse()
- {static} void listCourses()
- {static} void toggleCourseActive()
- {static} void enrollStudent()
- {static} void listEnrollmentsForStudent()
- {static} void markEnrollmentStatus()
}


class com.airtribe.learntrack.entity.Enrollment {
- int id
- int studentId
- int courseId
- LocalDate enrollmentDate
- EnrollmentStatus status
+ int getId()
+ int getStudentId()
+ int getCourseId()
+ LocalDate getEnrollmentDate()
+ EnrollmentStatus getStatus()
+ void setStatus(EnrollmentStatus)
+ String toString()
}


class com.airtribe.learntrack.entity.Person {
# int id
# String firstName
# String lastName
# String email
+ int getId()
+ String getFirstName()
+ String getLastName()
+ String getEmail()
+ String getDisplayName()
+ String getDetails()
}


class com.airtribe.learntrack.util.IdGenerator {
- {static} int studentCounter
- {static} int courseCounter
- {static} int enrollmentCounter
+ {static} int nextStudentId()
+ {static} int nextCourseId()
+ {static} int nextEnrollmentId()
}


class com.airtribe.learntrack.service.StudentService {
- List<Student> students
+ Student addStudent(String,String,String,String)
+ List<Student> listStudents()
+ Student findById(int)
+ void deactivateStudent(int)
}


class com.airtribe.learntrack.service.EnrollmentService {
- List<Enrollment> enrollments
- StudentService studentService
- CourseService courseService
+ Enrollment enroll(int,int,LocalDate)
+ List<Enrollment> findAll()
+ Enrollment findById(int)
+ List<Enrollment> findByStudentId(int)
+ void updateStatus(int,EnrollmentStatus)
}




com.airtribe.learntrack.entity.Person <|-- com.airtribe.learntrack.entity.Trainer
com.airtribe.learntrack.exception.RuntimeException <|-- com.airtribe.learntrack.exception.EntityNotFoundException
com.airtribe.learntrack.entity.Person <|-- com.airtribe.learntrack.entity.Student
@enduml